[project]
name = "pid-tuner"
version = "1.0.0"
description = "PID参数调节工具 - 通过串口调节底盘控制系统的PID参数"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8.1"
keywords = ["pid", "tuner", "serial", "control", "gui", "tkinter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

dependencies = [
    "pyserial>=3.5,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "black>=23.0,<25.0",
    "flake8>=5.0,<8.0",
    "mypy>=1.0,<2.0",
]

[project.scripts]
pid-tuner = "pid_tuner:main"
pid-receiver = "test_receiver:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0,<9.0",
    "black>=23.0,<25.0", 
    "flake8>=5.0,<8.0",
    "mypy>=1.0,<2.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true